--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .abc {
+      .container {
         float: right;
         padding: 15px 5px;
         overflow: hidden;
         font-size: 20px;
         position: relative;
         width: 300px;
-        background-color: coral;
+        background-color: #006aff;
       }
-      #pot {
+      #message {
         position: relative;
         color: white;
         font-weight: bold;
@@ -47,8 +47,8 @@
     </style>
   </head>
   <body>
-    <div class="abc">
-      <span id="pot">Only $19.99 monthly </span>
+    <div class="container">
+      <span id="message">Only $19.99 monthly </span>
     </div>
   </body>
 </html>
