--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         color: white;
         font-weight: bold;
         right: -110%;
-        -webkit-animation: linear infinite;
-        -webkit-animation-name: run;
-        -webkit-animation-duration: 5s;
-        -webkit-animation-delay: 1s;
+        animation: linear infinite;
+        animation-name: run;
+        animation-duration: 5s;
+        animation-delay: 1s;
         animation-iteration-count: 1;
         animation-fill-mode: forwards;
       }
-      @-webkit-keyframes run {
+      @keyframes run {
         0% {
           right: -100%;
         }
